# etoro-tui

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  sonarcloud.yml
docs/: config.example.toml  etoro-api-actual.md  etoro-websocket-actual.md
docs/superpowers/plans/: 2026-05-05-etoro-tui-implementation.md  2026-06-29-websocket-price-stream.md
docs/superpowers/specs/: 2026-05-05-etoro-tui-design.md  2026-06-29-websocket-migration-design.md
src/etoro_tui/: __init__.py  __main__.py  app.py  config.py  demo.py  models.py  setup_wizard.py  storage.py  styles.tcss
src/etoro_tui/clients/: __init__.py  census.py  etoro.py  news.py  price_stream.py  remote_fetch.py  signals.py  yahoo.py
src/etoro_tui/widgets/: __init__.py  detail_panel.py  footer.py  header.py  help_modal.py  positions_table.py
tests/: conftest.py  test_app_logic.py  test_app_smoke.py  test_clients_census.py  test_clients_etoro.py  test_clients_news.py  test_clients_price_stream.py  test_clients_signals.py  test_clients_yahoo.py  test_config.py  test_models.py  test_storage.py  test_widgets_header.py  test_widgets_positions_table.py
