[project]
name = "etoro-tui"
version = "0.4.0"
description = "Live eToro portfolio TUI with fundamentals, signals, and indices in your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "Dimitrios Plessas" },
]
keywords = [
    "etoro", "portfolio", "trading", "tui", "terminal", "finance",
    "stocks", "investing", "textual",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.86",
    "httpx>=0.28",
    "yfinance>=0.2.40,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]
# Cross-platform credential storage (macOS Keychain, Windows Credential
# Manager, Linux Secret Service). Optional so we don't force the system
# deps (dbus on Linux) on users who prefer the .env file.
keyring = ["keyring>=24"]

[project.scripts]
etoro-tui = "etoro_tui.__main__:main"

[project.urls]
Homepage      = "https://github.com/weirdapps/etoro-tui"
Repository    = "https://github.com/weirdapps/etoro-tui"
Issues        = "https://github.com/weirdapps/etoro-tui/issues"
Documentation = "https://github.com/weirdapps/etoro-tui#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etoro_tui"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "docs", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["docs/superpowers"]  # generated planning artefacts

[tool.ruff.lint]
# Sensible default + import sorting + a few extra correctness rules.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "W",   # pycodestyle warnings
    "I",   # isort (import order)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modern Python idioms)
]
ignore = [
    "E501",  # line length (we set line-length already; let formatter handle)
    "B008",  # function call in default arg (common + safe in our code)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` is fine in tests
