[project]
name = "etoro-tui"
version = "0.4.0"
description = "Live eToro portfolio TUI with fundamentals, signals, and indices in your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "Dimitrios Plessas" },
]
keywords = [
    "etoro", "portfolio", "trading", "tui", "terminal", "finance",
    "stocks", "investing", "textual",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=8.2.8",
    "httpx>=0.28",
    "yfinance>=1.5.1,<1.6",
    # Cross-platform credential storage (macOS Keychain, Windows Credential
    # Manager, Linux Secret Service). On Linux, SecretService backend needs dbus.
    "keyring>=24",
    # Real-time price stream (eToro WebSocket). asyncio-native; httpx can't do WS.
    "websockets>=16.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.21",
    "ruff>=0.15.22",
]

[project.scripts]
etoro-tui = "etoro_tui.__main__:main"

[project.urls]
Homepage      = "https://github.com/weirdapps/etoro-tui"
Repository    = "https://github.com/weirdapps/etoro-tui"
Issues        = "https://github.com/weirdapps/etoro-tui/issues"
Documentation = "https://github.com/weirdapps/etoro-tui#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etoro_tui"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "docs", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["docs/superpowers"]  # generated planning artefacts

[tool.ruff.lint]
# Sensible default + import sorting + a few extra correctness rules.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "W",   # pycodestyle warnings
    "I",   # isort (import order)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modern Python idioms)
]
ignore = [
    "E501",  # line length (we set line-length already; let formatter handle)
    "B008",  # function call in default arg (common + safe in our code)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` is fine in tests
